Wed Apr 19 13:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Use true/false, const improvements

        * tao/Valuetype/AbstractBase.cpp:
          Use C++ cast instead of C cast

Wed Apr 19 13:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.h:
          Removed not needed forward declarations

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Any_Impl.cpp:
        * tao/BiDir_GIOP/BiDirPolicy_Validator.cpp:
          Use false/true instead of 0/1 for bool

        * tao/PortableServer/Object_Adapter.h:
          Don't export poa_name_iterator and iteratable_poa_name

        * tao/PortableServer/Object_Adapter.cpp:
          Use true/false and when the object adapter can't be found
          throw a OBJECT_NOT_EXIST with minor code 2

Wed Apr 19 12:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Timer.h:
          No need to export this class from the TAO lib

        * tao/ORB.h:
          Use false for the default of the shutdown method

Wed Apr 19 12:51:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.mpc:
        * examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler.mpc:
          Made these projects dependent on each other to make sure
          that they don't build in parallel and generate the same idl
          file twice at the same moment. Thanks to Chad Elliot for the
          info how to do this the easiest

Wed Apr 19 12:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/tie_sh.cpp:
          Generate doxygen documentation style and use true instead of 1

        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
          Generate true for boolean instead of 1

        * TAO_IDL/be/be_visitor_valuetype/field_ch.cpp: