@@ -5,9 +5,6 @@
 #include "ace/Singleton.h"
 #include "ace/Log_Msg.h"
 #include "ace/Log_Msg_Callback.h"
-#if (defined (_MSC_VER) && (_MSC_VER < 1300))
-#include <fstream>
-#endif
 
 #ifndef LOG_MANAGER_H
 #define LOG_MANAGER_H
